bonus/conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
spec:
  rules:
    - host: gitlab.gitlab.local
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitlab
              port:
                number: 80
